--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta content='width=device-width; height=device-height; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <meta name="license" content="
-        Copyright 2013 Abram Hindle
+        Copyright 2022 Gurjog Singh, 2013 Abram Hindle
         
         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
@@ -22,22 +22,49 @@
     "/>
     <script src="json2.js"></script>
   </head> 
-  <body bgcolor="black" height="100%" width="100%"> 
+  <body height="100%" width="100%" style="background-color: green;"> 
+      <button id="button">Clear Page</button>
     <canvas id="c" width="100%" height="100%" style="-webkit-tap-highlight-color: transparent;"></canvas> 
     <script>
 var canvas = document.getElementById('c');
+var button = document.getElementById('button');
 var host = window.location.host;
 var context = canvas.getContext("2d");
 var W = canvas.width  = window.innerWidth-6;
 var H = canvas.height = window.innerHeight-50;
 
+drawField();
 
+function drawField(){
+    //how to add image - https://www.w3schools.com/tags/canvas_drawimage.asp (Copyright 1999-2022 by Refsnes Data. All Rights Reserved.)
+    var img = new Image();
+    img.src = 'field.jpg';
+    img.onload = () => {
+        context.drawImage(img, 0,0, canvas.width,canvas.height);
+    }
+}
+button.onclick = function (event){
+    let xhr = new XMLHttpRequest();
+    xhr.open('GET', '/clear', true);
+
+    xhr.onload = function() {
+        if (xhr.status == 200) {
+                console.log(this.response)
+        }
+    }
+    xhr.send()
+    clearFrame()
+    renderFrame(); 
+}
+ 
 function sendJSONXMLHTTPRequest(url, objects, callback) {
     var xhr = new XMLHttpRequest();
     xhr.onreadystatechange = function () {
         if (xhr.readyState==4) {
             try {
                 if (xhr.status==200) {
+                    let response = JSON.parse(this.response);
+                    console.log(respose);
                     //XXX: parse some JSON from the request!
                     //XXX: Pass the data to the callback!
                 }
@@ -63,11 +90,21 @@ function drawCircle(context,entity) {
         var x = entity["x"];
         var y = entity["y"];
         //moveTo(x,y);
-        fillStyle = entity["colour"];
-        strokeStyle = fillStyle;
-        arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
-        stroke();                                
+         //how to add image - https://www.w3schools.com/tags/canvas_drawimage.asp (Copyright 1999-2022 by Refsnes Data. All Rights Reserved.)
+        var img = new Image();
+        img.src = 'ball.png';
+        img.onload = function() {
+            //how to display ball - https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D/createPattern 
+            //(Portions of this content are ©1998–2022 by individual mozilla.org contributors. Content available under a Creative Commons license.)
+            var pattern = football = context.createPattern(img, 'repeat');
+            //fillStyle = entity["colour"];
+            fillStyle = pattern; 
+        }
+        //strokeStyle = fillStyle;
+        //arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
+        drawImage(img, x, y, 50, 50);                                
     }
+    //console.log(entity);
 }
 
 function prepEntity(entity) {
@@ -82,16 +119,18 @@ function prepEntity(entity) {
 
 function clearFrame() {
     with(context) {
-	moveTo(0,0);
-	fillStyle = "#000";
-	fillRect(0,0,W,H);
+	drawField()
+    //moveTo(0,0);
+	//fillStyle = "#000";
+	//fillRect(0,0,W,H);
     }
+    console.log("pass");
 
 }
 
 // This actually draws the frame
 function renderFrame() {
-    clearFrame();
+    //clearFrame();
     for (var key in world) {
         var entity = world[key];
         drawCircle(context,prepEntity(entity));
@@ -138,13 +177,24 @@ function addEntity(entity, data) {
     world[entity] = data;
     drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just  modified!
+    var xhr = new XMLHttpRequest();
+    xhr.open("PUT", '/entity/' + entity, true)
+
+    //https://stackoverflow.com/questions/9713058/send-post-data-using-xmlhttprequest
+    xhr.setRequestHeader('Content-type', 'application/json');
+    xhr.setRequestHeader('Accept', 'application/json');
+    //XXX: POST to a URL
+    //XXX: set the mimetype and the accept headers!
+    // Remember to use application/json !
+    console.log("DATA: ", data);
+    xhr.send(JSON.stringify(data));
 
 }
 
 var counter = 0;
 function addEntityWithoutName(data) {
     //var name = "X"+Math.floor((Math.random()*100)+1);
-    var name = "X"+(counter++)%100;
+    var name = "X"+(counter++)%500;
     addEntity(name,data);
 }
 
@@ -263,10 +313,29 @@ mouse.mousedraggers.push(function(x,y,clicked,e) {
 function update() {
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
     drawFrame();
+    let xhr = new XMLHttpRequest();
+    let url = location.host;
+    console.log("YOURL: ", url);
+    xhr.open('GET', '/world', true);
+
+    xhr.onload = function() {
+        if (xhr.status == 200) {
+            if (JSON.parse(this.response) !== undefined){
+                world = JSON.parse(this.response)
+                console.log("WORLD: ",world)
+            }  
+        }
+    }
+    xhr.send()
+    if (JSON.stringify(world).length === 2){
+        clearFrame();
+        console.log("CLEARED IT BITCH")
+    }
+    renderFrame()
 }
 
-// 30 frames per second
-setInterval( update, 1000/30.0);
+// 10 frames per second
+setInterval( update, 1000/10);
 
 
 
